fix: overflow

--- a/global.css
+++ b/global.css
@@ -8,6 +8,7 @@
 
 html {
   width: 100vw;
+  overflow-x: hidden;
 }
 
 body,
